<resources>
    <string name="app_name">CodeBundle</string>
    <string name="hello_world">Hello world!</string>
    <string name="CBAbout">We are CodeBundle, a group of four individuals who have seen a gap in the internet needing to be filled, we are of course referring too Linux. Linux is both (in our opinion) underused and undervalued as an operating system, and we are here to provide novice and expert programmers alike, information relevant to the linux platform, and also to programming in general, already our site contains tutorials and reviews, many of which have videos that can be found on our youtube channel to go with them. \n</string>
    <string name="SamBio">My name is Sam, one day I got so annoyed with windows, I downloaded ubuntu, and installed it, I hadn\'t tried it before, and I just went ahead and wiped my harddrive and installed it, windows annoyed me that much by this point. I\'ve never looked back. I know many programming languages and have gone on to develop my skills in some of the lower level aspects of programming much further than I should think I will ever need. \n</string>
    <string name="DaveBio">Hi, I\'m Dave. My name\'s Tom, but my nickname\'s Dave, so I\'ll stick with it for now. My aim for CodeBundle is to create detailed reviews and tutorials. \n</string>
    <string name="JackBio"> My name is Jack, or as Sam will call me, &quot;wonder-child&quot;, I have acquired this nickname due to my programming skills that have caused Sam to consider me a rival and a threat to his title of the best programmer in our group of friends. I like the others am a United Kingdom Citizen, however I will probably not be producing as much content as the others, mostly due to the nature of my present endeavors being outside the range in which uploading and writing content would fall in to my allocated time allotments. \n</string>
    <string name="AdamBio"> Hi, my name is Adam and I live in the United Kingdom, my hobbies consist primarily of Pokemon, and I converted to Linux under the advice of Sam; due to my computers limited hardware, I run Lubuntu with LXDE as the Desktop Environment (Obviously). I have experience in the XFCE desktop, and my primary function will be supplying review content and less technical tutorials.</string>
    <string name="rChromiumOS">NB1: Because we like open-source stuff, we will refer to this as \'Chromium OS/Chromium\' from now on even though they are essentially identicle, we also tested it as Chromium OS because that is the only one available for non-Chromebooks/boxes. The only difference between the two is that Chrome has the proprietary hardware drivers and Chromium doesn\'t (because it aims to be fully open-source like many Linux distributions). We found this out because we actually had to compile the code to get it to work. \n\nNB2: Also, Chromium is essentially the same as Google Chrome is except one is open-source and one is proprietary. \n\nGoogle Chromium OS is an OS completely based on Chromium and it shares the same account system as Chromium.\n\nThe default background is grey. On a normal desktop, you would be able to right-click on a desktop and be able to change the background and settings etc&#8230; But in Chromium OS, your only option is \'Set wallpaper&#8230;\' because all you need is a big empty space that never gets filled with anything don\'t you? The power users are going to love Google for that. You have a choice of 4 \'Urban\' backgrounds among others and you have to download everything because on Chromium OS everything is stored on the Internet because no-one would ever need a hard drive for anything would they?\n\nOn Chromium OS, everything is a web browser, even the settings. On Chromium, if you go to \'chrome://chrome/settings/\', you go to your settings menu. In Chromium OS, you get a very similar thing. Oddly, Google was clever enough to put timezones in the advanced settings and, because this is Google we are talking about here, they\'ve put privacy in the advanced settings. Obviously Google doesn\'t want you to stop them stealing your information.\n\nOne good thing about Chromium OS is that the boot time is fast. When we ran Chromium OS in VirtualBox on the same specs as a Chromebook, it booted in 13sec, which is good but it won\'t let you do anything if you don\'t have the Internet during setup, this is because your machine has to have an admin account which has to be a Google account which requires Internet connection to set up. When we tested it, Chromium OS was attached to the Internet through the host. We haven\'t tried but we assume that if you disconnect the Internet then you would get a \"He is dead Jim :(\" message.\n\nSo, next up, programs. On most big Linux distributions like Ubuntu there is an app store, on smaller ones like SliTaz, you have the Taz Panel, Fedora (another big linux distro) has Yum. With all these, you can download packages (obviously on Windows/Mac OS X you can install programs as well). On Chromium OS, you go to a website and \'download\' an app, it doesn\'t actually download it. For example, if you downloaded a YouTube app (like YouTubeMediaPlayer on Ubuntu), you would expect it to be a little program that shows you your subscribers and your videos because you found it on an app store! Well, you click on the app and wow! You have&#8230;YouTube! www.youtube.com! Which you can access by&#8230;wait&#8230;no&#8230;yes&#8230;every current web browser! But oh no! Chromium OS doesn\'t have Flash set up by default so the most used Google service other than the search engine doesn\'t work on the Google OS. You will have to subscribe to the HTML5 trial to access YouTube videos. Even Ubuntu can run YouTube Flash videos by default.\n\nBasically, programs aren\'t apps, they\'re just hyperlinks. You don\'t need to buy a Chromebook, you can just download Chromium to get the apps. The app store you get \'apps\' on in Chromium OS is exactly the same as the app store you get \'apps\' from on Chromium. The only difference when you get apps on Chromium OS as opposed to Chromium is that it gets added to your fancy Context Menu and the programs which go there you can pin to your taskbar if you want.\n\nIf you have Google Chrome or Chromium at home go to \'chrome.google.com/webstore/category/home\' and you will get exactly the same app store as a Chromebook but you get it for free.\n\nA Chromebook/box is a mid-to-high-end PC running a browser. You wouldn\'t really spend anything other than £150-£300 right? So when we look it up in Google Shopping (which, by the way, is in 4x3 Chromebook/box resolution even though Google Shopping is built to work in 16x9). But no, the cheapest Chromebook is £300 and the more expensive one (which has a 16GB hard drive which you don\'t need because everything on the Chromebook is on the Internet and Google give you 5GB of Google Drive space (for you to sync to) because that is all you need, isn\'t it?) is £430. Also, they claim Chrome OS has a 8sec boot time and when we tested it on the lower-end specs it took 13sec.\n\nEssentially, they give you everything an old PC has (except with a microphone, an HD webcam and optional 3G) for £430. 3G is not an option, if you are buying a Chromebook, it has to have the Internet so you are getting 3G on that, no debate because you are not just going to use your Chromebook in your house. And 3G costs an extra £45. So you are paying £475 when you should be paying a maxiumum of £300. £200 too much.\n\nAnother point is that the adverts are incorrect on \"This is how you backup a Chromebook\". Becuause that is not how you back up a Chromebook, because you only have your 5GB of space. Sam would already go over that in two and a half days. Dave has had his computer for less than a year and he has used 250GB. A normal person would get through 5GB in two weeks. And \"You don\'t need to teach your grandma how to use a Chromebook\" is true, but Chromium OS is TOO simple, you can\'t do anything with it.\n\nYet another thing, do you know of Web Games that don\'t need Flash? Because you don\'t get Flash by default. But that\'s OK because you have the tile functionality! That tiles over half of your screen! Good job Google Developers, you\'ve made it tile for a lower resolution!\n\nThis is like the Windows Phone, who gets a Windows Phone, who gets a Chromebook? These are just facts. The Chromebook/box are not the future, neither are giant freaking web tiles. Sam personally doesn\'t think that the future is Linux, but it\'s definitely not Windows and it\'s definitely not Chrome OS. We think that Google should stop trying to invade new markets like the operating system, stick with the duel their having on phones and stick with being the No.1 search provider. Google have gone too far.\n\nThe good thing is that YouTube has improved but all the same, Google need to be taken down a notch like a lot of large companies do.\n\nThat really is all there is to say about Google\'s OS, it is an overpriced piece of hardware, has no software and has an oversimplified operating system where everything is a webpage.\n\nOh, and the Terminal emulator (command prompt for Windows users). The file system is horribly complicated with loads of folders and you have to go to \'/home/chronos/user\' to get to your main stuff which is too full of stuff to be usable.\n\nGoogle\'s Chromium OS is not a Linux distribution. It is too simple an interface and too convoluded under-the-hood (technicall stuff). It just doesn\'t qualify for the name of Linux. If Google tried to market Chromium OS as \'Linux\' then Linux would be dead before you could blink twice. We\'re so glad that they don\'t market it as Linux because then people would look at the Google OS, associate it with Linux and never touch Linux again. And we wouldn\'t blame those people for abandoning Linux either.\n\nGogle is evil and stupid. We don\'t know why Google call their OS the future&#8230;if it is, Sam would rather go back to Windows 98. Google+ failed, the Nexus is appealing but the Chromebook&#8230;no.\n\nTo reiterate, Google have been pushing it too far. Chromium OS shouldn\'t be a thing, and with that, we should lay it to rest. However, to end on a high note, Chromium OS has done one good thing&#8230;and that is&#8230;it\'s made Vista look good. With Vista, you could tell it to run a program and it would succeed 40sec before it crashed? You can\'t run programs with Chromium OS, you have hyperlinks.\n\nUsability: 2/10 (It can load webpages&#8230;poorly&#8230;and has hyperlinks, barely worth rewarding)\nSize: 10/10 (Probably non existent, pretty small, doesn\'t have anything on it)\nPerformance: 5/10 (Depends on your internet connection)\nOverall: 6/10 (Only because it is good at some things above, 6 is the closest average, that\'s the only reason for that number, it\'s not worth using, if you want a fast booting OS, go grab Xubuntu, Lubuntu (our review: 8/10) or, if you need extra stability, Linux Mint XFCE, they actually boot faster in many cases and give you get a hard drive)\n\nPlease keep checking our video on Chrome OS and downvote the comments from the Google fanboys so that we can ban them. Thanks.\n</string>
</resources>